--- a/index.html
+++ b/index.html
@@ -5,11 +5,29 @@
     <title>SystemNext IT - Digital Solutions</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
     <meta name="description" content="Accelerate your business growth with modern, scalable, and result-driven digital solutions." />
+    <!-- DNS Prefetch & Preconnect for faster resource loading -->
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+    <link rel="dns-prefetch" href="https://c.animaapp.com">
+    <link rel="dns-prefetch" href="https://hdnfltv.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500&family=Manrope:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://c.animaapp.com" crossorigin>
+    
+    <!-- Preload critical fonts with minimal weights -->
+    <link rel="preload" as="style"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Inter:wght@500;700&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Inter:wght@500;700&display=swap"
+      rel="stylesheet" media="print" onload="this.media='all'">
+    <noscript>
+      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Inter:wght@500;700&display=swap"
+        rel="stylesheet">
+    </noscript>
+    
+    <!-- Preload critical images -->
+    <link rel="preload" as="image" href="https://c.animaapp.com/6PVGKTMi/img/frame-1000001802@4x.png">
     <style>
-      @import url("https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css");
+      /* Critical CSS - Inline for faster FCP */
       * {
         -webkit-font-smoothing: antialiased;
         box-sizing: border-box;
@@ -23,8 +41,45 @@
         padding: 0;
         min-height: 100%;
         overflow-x: hidden;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
       }
-      /* a blue color as a generic focus style */
+      /* Skeleton loading styles - critical for perceived performance */
+      .initial-loader {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        z-index: 9999;
+        transition: opacity 0.3s ease-out;
+      }
+      .initial-loader.fade-out {
+        opacity: 0;
+        pointer-events: none;
+      }
+      .loader-spinner {
+        width: 50px;
+        height: 50px;
+        border: 3px solid rgba(255, 255, 255, 0.1);
+        border-top-color: #ff6b35;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+      }
+      .loader-text {
+        color: #fff;
+        margin-top: 20px;
+        font-size: 14px;
+        opacity: 0.8;
+      }
+      @keyframes spin {
+        to { transform: rotate(360deg); }
+      }
+      /* Focus styles */
       button:focus-visible {
         outline: 2px solid #4a90e2 !important;
         outline: -webkit-focus-ring-color auto 5px !important;
@@ -40,7 +95,24 @@
     <link href="styleguide.css" rel="stylesheet" />
   </head>
   <body>
+    <!-- Initial loader shown before React hydrates -->
+    <div id="initial-loader" class="initial-loader">
+      <div class="loader-spinner"></div>
+      <p class="loader-text">Loading...</p>
+    </div>
     <div id="app"></div>
+    <script>
+      // Remove initial loader immediately when app is ready
+      window.addEventListener('DOMContentLoaded', function () {
+        var loader = document.getElementById('initial-loader');
+        if (loader) {
+          loader.classList.add('fade-out');
+          setTimeout(function () {
+            loader.remove();
+          }, 200);
+        }
+      });
+    </script>
     <script type="module" src="./src/index.jsx"></script>
   </body>
 </html>
